--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,17 @@
+buildscript {
+    ext {
+        protobufVersion = '3.20.3'      // 이 버전 이상은 grpc-out 에러 발생
+        protobufPluginVersion = '0.9.4'
+        grpcVersion = '1.57.2'
+    }
+}
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.4.4'
     id 'io.spring.dependency-management' version '1.1.7'
+    id 'com.google.protobuf' version "${protobufPluginVersion}"
+    id 'com.google.cloud.tools.jib' version '3.3.2'
 }
 
 group = 'spring'
@@ -24,6 +34,10 @@ repositories {
 }
 
 dependencies {
+    // GRPC Interface
+    implementation "io.grpc:grpc-protobuf:${grpcVersion}"
+    implementation "io.grpc:grpc-stub:${grpcVersion}"
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
@@ -32,6 +46,26 @@ dependencies {
     // 테스트 코드에서 Lombok 사용
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
+}
+
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:${protobufVersion}"
+    }
+    generatedFilesBaseDir = "$projectDir/src/generated"
+    clean {
+        delete generatedFilesBaseDir
+    }
+    plugins {
+        grpc {
+            artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}"
+        }
+    }
+    generateProtoTasks {
+        all()*.plugins {
+            grpc{}
+        }
+    }
 }
 
 tasks.named('test') {
