--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=advanced
+
+grpc.server.port=9000
+grpc.client.grpc-devproblems-service.address=static://localhost:9000
+# tls X, ??? ??? ??? ?? ??? ??
+grpc.client.grpc-devproblems-service.negotiation-type=plaintext
